--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -16,7 +16,6 @@ home-banner-image-position: top # Default is center
 
 ##########
 # ITEM PAGE
-#
 # see _data/metadata-config.csv to define the metadata fields that will display.
 browse-buttons: true # true/false, adds previous/next arrows to item pages
 
@@ -80,8 +79,8 @@ navbar-background: bg-dark
 bootswatch: # leave blank or comment out for plain bootstrap
 
 # THEME FONTS
-base-font-size: 1.6em
+base-font-size: 16px
 text-color: "#191919"
 link-color: "#17a2b8"
-base-font-family: Philosopher # comment out for bootstrap defaults. e.g. Roboto
-font-cdn: <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet"> # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+base-font-family: Hina Mincho # comment out for bootstrap defaults. e.g. Roboto
+font-cdn: <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Roboto:wght@300&display=swap" rel="stylesheet"> # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
